# kafka-connect-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  create-connectors.sh  docker-compose.yml  implementation-plan.md
.github/workflows/: rust.yml
.sqlx/: query-985862a227bf6e5ea2f9b761bc7fb89d79c0aa7b9f44b8590e1722eefe4be4f9.json  query-bb78eb1d42c202910dc62ec907d88075d0f6a6166aeebe32b25b273ae3d58638.json  query-d62565b44ce24d4fceb2dafe0abb5020a4f2ee2f63b1b508ab1d5734f304ec18.json
connectors/: postgres-sink-connector.json  postgres-source-connector.json
init-db/: 01-create-contacts-table.sql
init-db-sink/: 01-create-contacts-table.sql
scripts/: view_contacts.sh
src/: lib.rs  main.rs
