[package]
name = "kafka-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "time"] }
rdkafka = { version = "0.34", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apache-avro = "0.16"
schema_registry_converter = "3.1"

[dev-dependencies]
mockall = "0.11"
